# threema-client-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  register.py
examples/: chatwith.rs  connect.rs  getblob.rs  putblob.rs
src/: blob_api.rs  directory_api.rs  lib.rs  main.rs  messaging_client.rs  threema_id.rs  transport.rs
src/import/: json_file.rs  mod.rs
