[package]
name = "threema-client"
version = "0.1.0"
authors = ["Jonathan Krebs <jonathan.krebs@fau.de>"]
edition = "2018"
repository = "https://github.com/TheJonny/threema-client-rs"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
prost = "*"
sodiumoxide = "*"
base32 = "*"
base64 = "*"
rpassword = "5"
rust-crypto = "^0.2"
getrandom = "*"
hex = "*"
reqwest = {version="*", features=["blocking", "json", "multipart"]}
flate2 = "*"
serde = "*"
serde_json = "*"
anyhow = "*"
thiserror = "*"

futures-core = "*"
async-stream = "*"

tokio = { version = "1.11.0", features = ["full"] }

log = "*"
env_logger = "*"

[build-dependencies]
prost-build = "*"

