[package]
name = "threema-client"
version = "0.1.0"
authors = ["thejonny"]
edition = "2018"
repository = "https://github.com/TheJonny/threema-client-rs"
license = "AGPL-3.0-only"
description = "WIP inofficial threema client implementation and tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#prost = "*"
sodiumoxide = "0.2"
base32 = "0.4"
base64 = "0.13"
rpassword = "5"
rust-crypto = "^0.2"
getrandom = "0.2"
hex = "0.4"
reqwest = {version="*", features=["blocking", "json", "multipart"]}
flate2 = "1"
serde = "1"
serde_json = "1"
anyhow = "1"
thiserror = "1"

tokio = { version = "1.11", features = ["full"] }

log = "0.4"
env_logger = "0.9"

#[build-dependencies]
#prost-build = "*"

